Issue 31456: **EHR new UI: animal history tab EHR specific spacing and legend issues
SVN r53738 |2017-09-14 14:22:30 +0000

--- a/ehr/resources/web/ehr/stylesheet.css
+++ b/ehr/resources/web/ehr/stylesheet.css
@@ -22,7 +22,7 @@
 }
 
 table.ehr-legend {
-    background-color: #f4f4f4;
+    background-color: transparent;
 }
 
 table.ehr-legend td {
